[package]
name = "klave-connector"
version = "0.1.2"
authors = [
    "Jérémie Labbé <jeremie@secretarium.org>",
    "Étienne Bossé <etienne@secretarium.org>",
    "Florian Guitton <florian@secretarium.org>",
    "Jean-Jacques Lafay <jean-jacques@secretarium.org>",
]
license = "MIT"
edition = "2021"
repository = "https://github.com/secretarium/devsuite-rust.git"
homepage = "https://klave.com/"
documentation = "https://docs.klave.com/sdk/latest"
readme = "README.md"
resolver = "2"
description = "Module allowing easy connection to deployed Klave apps"

[dependencies]
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.27"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2.5.4"
base64 = "0.21"
rand = "0.8"
sha2 = "0.10"
aes-gcm = "0.10"
p256 = { version = "0.13", features = ["ecdh"] }
num-bigint = "0.4"
num-traits = "0.2"
async-trait = "0.1"
thiserror = "1"
der = "0.7.9"
elliptic-curve = "0.13"
hex = "0.4.3"
